--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "@oxycode/express-utilities",
-  "version": "1.0.0",
+  "name": "express-utilities",
+  "version": "0.0.1",
   "description": "This repo has list of commonly used express libraries",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm version patch",
+    "postpublish": "git add package.json && git commit -m \"version updated\""
   },
+  "files": [
+    "src",
+    "package.json"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
