--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,9 +21,14 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ./.npmrc
       - name: Install Dependencies
         run: npm ci --omit=dev
+      - name: Unit Test
+        run: npm test --if-present
       - name: Publish package
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          npm version patch
           npm publish --scope ${{ secrets.NPM_USER }} --provenance --access public
+          git add .
+          git commit -m "Version Updated"
           git push
