--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,14 +17,13 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - name: Update .npmrc
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ./.npmrc
       - name: Install Dependencies
         run: npm ci --omit=dev
       - name: Publish package
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          npm config set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
           npm version patch
           npm publish --scope ${{ secrets.NPM_USER }} --provenance --access public
           git add .
